[package]
name = "darklight"
edition = "2021"
version = "0.1.0-alpha"

[[bin]]
name = "darklight"
path = "src/darklight.rs"
decsription = "Official DarkLight website on DLW"

[[bin]]
name = "verify_server"
path = "src/verify_server.rs"
decsription = "Used by Distributors to verify a user"

[[bin]]
name = "keyss"
path = "src/keyss.rs"
decsription = "A server to request a new DarkLight user key"

[[bin]]
name = "recomends"
decsription = "A server that sends recomended version numbers for DarkLight services"
path = "src/recomends.rs"

[[bin]]
name = "cns"
path = "src/cns.rs"
decsription = "The Centralized Name Server, used to asociate human readable names with DarkLight Ids"
required-features = ["cns_bin"]

[dependencies]
dlwp = { path = "dlwp/", features = ["include_serde"] }
dlcns = { path = "tools/dlcns/", optional = true }
fernet = "0.2.2"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["serde_derive", "std"] }
signal-hook = "0.3.17"

[workspace]
members = [
    "darklight_driver/",
    "dl_instance/",
    "dl_instance/distributor/distributor/",
    "dlwp/",
    "tools/client",
    "tools/dlcmd", 
    "tools/dlcns",
    "tools/dlup",
    "tools/new_dlukey/",
]

[features]
info_dl = []
visu_dl = []
cns_bin = ["dlwp/include_chrono", "dlcns"]
