[package]
name = "dl_instance"
version = "0.1.0"
edition = "2021"
description = "The official code for a DarkLight instance"
authors = ["Nathan McMillan"]

[lib]
name = "libdl_instance"
path = "src/lib.rs"

[[bin]]
name = "dl_instance"
path = "src/main.rs"

[dependencies]
dlwp = { path = "../dlwp/", features = ["include_serde"] }
procfs = "0.16.0"
serde = "1.0.200"
tokio = { version = "1.36.0", features = ["full"] }
