[package]
name = "dlwp"
authors = ["Nathan McMillan"]
description = "The DLWP library"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
cerpton = "0.1.0"
serde = { version = "1.0.188", features = ["serde_derive", "std"] }
serde_json = { version = "1.0.100" }
serialport = { version = "3.3.0", optional = true }

[features]
# If enabled serde and serde_json will be publicly available from dlwp
include_serde = []
# Used by DarkLight driver, this is not needed for regular use
use_io = ["serialport"]
