[package]
name = "dlwp"
authors = ["Nathan McMillan"]
description = "The DLWP library"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
cerpton = "0.1.1"
chrono = { version = "0.4.31", optional = true }
serde = { version = "1.0.188", features = ["serde_derive", "std"] }
serde_json = { version = "1.0.100" }
serialport = { version = "3.3.0", optional = true }

[features]
# Enable if testing a stream
test_stream = []
# If enabled the serde and serde_json crates will be publicly available from dlwp
include_serde = ["serde/serde_derive", "serde/std"]
# If enabled the chrono crate will be publicly available from dlwp
include_chrono = ["chrono"]
# Used by DarkLight driver, this is not needed for regular use
use_io = ["serialport"]
