[package]
name = "dlwp"
authors = ["Nathan McMillan"]
description = "The DLWP library"
version = "0.1.0-alpha"
edition = "2021"
documentation = "https://docs.rs/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/NathanMcMillan54/dlw/"

[dependencies]
cerpton = "0.1.1"
chrono = { version = "0.4.31", optional = true }
serde = { version = "1.0.188", features = ["serde_derive", "std"] }
serde_json = { version = "1.0.100" }
serialport = { version = "4.5.1", optional = true }

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["include_chrono"]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["include_chrono"]

[features]
# Enable if testing a stream
test_stream = []
# If enabled the serde and serde_json crates will be publicly available from dlwp
include_serde = ["serde/serde_derive", "serde/std"]
# If enabled the chrono crate will be publicly available from dlwp
include_chrono = ["chrono"]
# Used by DarkLight driver, this is not needed for regular use
use_io = ["serialport"]
