[package]
name = "dlcns"
version = "0.1.0-alpha"
edition = "2021"
description = "A library for interacting with the DarkLight Centralized Name Server."
documentation = "https://docs.rs/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/NathanMcMillan54/dlw/"

[dependencies]
dlwp = { path = "../../dlwp/", features = ["include_serde"] }
serde = { version = "1.0.188", features = ["serde_derive", "std"] }
