[package]
name = "distributor"
version = "0.1.0"
edition = "2021"
description = "A TCP and serial distributor intended to run on POSIX-like systems"

[lib]
name = "lib_dldistributor"
edition = "2021"
path = "src/lib.rs"

[[bin]]
name = "distributor"
edition = "2021"
path = "src/main.rs"

[dependencies]
dlwp = { version = "0.1.0-alpha", features = ["use_io"] }
tokio = { version = "1.36.0", features = ["full"] }
