[package]
name = "distributor"
version = "0.1.0"
edition = "2021"
description = "A TCP and serial distributor intended to run on POSIX-like systems"

[lib]
name = "lib_dldistributor"
edition = "2021"
path = "src/lib.rs"

[[bin]]
name = "distributor"
edition = "2021"
path = "src/main.rs"
required-features = ["bin"]

[features]
bin = ["reqwest", "tokio", "lazy_static"] # This is what makes the binary dependencies optional, don't include it if you're only using the library

[dependencies]
dlwp = { path = "../../../dlwp/", features = ["use_io", "include_serde"] }
lazy_static = { version = "1.5.0", optional = true }
reqwest = { version = "0.11.24", optional = true }
tokio = { version = "1.36.0", features = ["full"], optional = true }
