[package]
name = "posix_distributor"
description = "A TCP and serial distributor intended to run on POSIX-like systems"
version = "0.1.0"
edition = "2021"

[dependencies]
dlwp = { path = "../../../dlwp/", features = ["use_io", "include_chrono", "include_serde"] }
lazy_static = { version = "1.5.0" }
libdistributor = { path = "../../libdistributor/" }
reqwest = { version = "0.11.24" }
tokio = { version = "1.36.0", features = ["full"] }
